--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/urlshortener
+MONGO_URI=mongodb://localhost:27017/url-shortner
+APP_URL = http://localhost:3000/
+JWT_SECRET = "thisisasecretkey"
