--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^17.2.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
     "nanoid": "^5.1.5"
