--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/url-shortner
+MONGO_URI=mongodb+srv://moaftaab786:3BO5zp848loIGskA@cluster0.7bwqrox.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 APP_URL = http://localhost:3000/
 JWT_SECRET = "thisisasecretkey"
