--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /BACKEND/node_modules
 /FRONTEND/node_modules
 
-# Environment variables
+# Environment variables (CRITICAL - Never commit these!)
 .env
 *.env
 .env.*
